--- a/index.html
+++ b/index.html
@@ -28,17 +28,149 @@
                 <h1 class="banner-title">Nayem Islam</h1>
                 <p class="banner-description">Who creates and maintains websites and web applications.I use programming
                     languages like HTML, CSS, and JavaScript to build the parts of a website.</p>
-                    <button class="btn-primary">Download CV</button>
-                    <button class="btn-primary">Contact</button>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/port3.png" alt="">
         </div>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I'm a designer & developer with a passion fon web design.I enjoy developing simple,clean and slick
+                websites that provide real value to the end user.Thousands of clients have procured exceptional resulfs
+                while working with me.Delivering work within time and budget which meets clients requiements in our
+                moto.
+            </p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Nayem Islam</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">naimulislam42000@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth</p>
+                    <p class="item-description">Sep 4,2006</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Chattogram,BD</p>
+                </div>
 
+            </div>
+        </section>
+        <section class="Skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">
+                I have 1 year experience building software. Below is a quick overview of my main technical skill sets
+                and technologies I use.Want to find out more about my experience? Checkout my online resume and project
+                portfolio.
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/js icon.png" alt="" width="50px">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here.You can change the icon above to any of
+                        the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/react logo.png" alt="" width="50px">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here.You can change the icon above to any of
+                        the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/node logo.png" alt="" width="50px">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here.You can change the icon above to any of
+                        the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/mongodb.png" alt="" width="50px">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here.You can change the icon above to any of
+                        the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2030-2032</h5>
+                        <div class="experience-description">List skill/technologies here.You can change the icon above
+                            to any of the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2030-2032</h5>
+                        <div class="experience-description">List skill/technologies here.You can change the icon above
+                            to any of the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2030-2032</h5>
+                        <div class="experience-description">List skill/technologies here.You can change the icon above
+                            to any of the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Front End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc-current</h5>
+                        <div class="experience-description">List skill/technologies here.You can change the icon above
+                            to any of the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Front End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc-current</h5>
+                        <div class="experience-description">List skill/technologies here.You can change the icon above
+                            to any of the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Front End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc-current</h5>
+                        <div class="experience-description">List skill/technologies here.You can change the icon above
+                            to any of the 1500+ FontAwsome 5 free icons available.Aenean commodo ligulaeget dolor</div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-download-cv"><button class="btn-primary">Download CV</button></div>
+
+        </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8:00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="images/fb logo.png" alt="" width="50px"></a>
+                <a href=""><img src="images/Instagram_icon.png" alt="" width="30px"></a>
+                <a href=""><img src="images/x 2 logo.png" alt="" width="60px"></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message me</h3>
+            <form class="Contact">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" placeholder="Your Email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary"type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 
